♻️ 🐛 Updated handling of joining Attack strings in statblocks; cleaner handling of Material components